BW layout issue fix

--- a/src/app/activities/base/base.component.scss
+++ b/src/app/activities/base/base.component.scss
@@ -196,7 +196,7 @@
     color: white;
 }
 .card-ar1-syllable {
-    padding: 5px 13px;
+    padding: 5px 7px;
     height: 103px;
     line-height: 1.1em;
     margin-right: 3px;
